fix --add-opens